--- a/src/leave_form.html
+++ b/src/leave_form.html
@@ -35,7 +35,8 @@
                     <label class="control-label " for="">姓名</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="name" placeholder="王德发" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="name" placeholder="王德发"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -47,7 +48,8 @@
                     <label class="control-label " for="">学院</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="college" value="华北科技学院本科生,建筑工程学院,地理信息科学(05134),地信B192" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="college"
+                        value="华北科技学院本科生,建筑工程学院,地理信息科学(05134),地信B192" aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -59,7 +61,8 @@
                     <label class="control-label " for="">班级</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="class" placeholder="地信B192" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="class" placeholder="地信B192"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -71,7 +74,8 @@
                     <label class="control-label " for="">手机</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="phone" placeholder="15511287200" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="phone" placeholder="15511287200"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -83,7 +87,8 @@
                     <label class="control-label " for="">离校原因</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="leave_reason" placeholder="看牙、核酸" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="leave_reason" placeholder="看牙、核酸"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -95,7 +100,8 @@
                     <label class="control-label " for="">离校去向</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="leave_to" placeholder="华北科技学院附近" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="leave_to" placeholder="华北科技学院附近"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -107,7 +113,8 @@
                     <label class="control-label " for="">请假天数</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="leave_day" placeholder="1" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="leave_day" placeholder="1"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -119,7 +126,8 @@
                     <label class="control-label " for="">开始时间</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="datetime" step="01" class="form-control" value="2021-12-18 09:30:02" name="start_time"  aria-describedby="inputSuccess3Status">
+                    <input type="datetime" step="01" class="form-control" value="2021-12-18 09:30:02" name="start_time"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -131,7 +139,8 @@
                     <label class="control-label " for="">结束时间</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="datetime" step="01" class="form-control " name="leave_time" value="2021-12-18 09:30:38" aria-describedby="inputSuccess3Status">
+                    <input type="datetime" step="01" class="form-control " name="leave_time" value="2021-12-18 09:30:38"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -143,7 +152,8 @@
                     <label class="control-label " for="">紧急联系人</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control" name="emergeName" placeholder="王德发 15511287200" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control" name="emergeName" placeholder="王德发 15511287200"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <div class="form-group">
@@ -155,10 +165,11 @@
                     <label class="control-label " for="">学号</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="stu_id" placeholder="201804126110" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="stu_id" placeholder="201804126110"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
-                <div class="form-group">
+            <div class="form-group">
                 <div class="col-xs-4 " style="font-size: 1.4rem;">
                     <svg class="icon svg-icon" aria-hidden="true">
                         <use xlink:href="#icon-sanhuamao"></use>
@@ -167,7 +178,8 @@
                     <label class="control-label " for="">导员</label>
                 </div>
                 <div class="col-xs-8">
-                    <input type="text" class="form-control " name="tutor" placeholder= "刘洋" aria-describedby="inputSuccess3Status">
+                    <input type="text" class="form-control " name="tutor" placeholder="刘洋"
+                        aria-describedby="inputSuccess3Status">
                 </div>
             </div>
             <input type="submit" value="提交" class="btn btn-primary btn-lg btn-block">
@@ -177,4 +189,3 @@
 </body>
 
 </html>
-
