--- a/src/leave_form.html
+++ b/src/leave_form.html
@@ -24,177 +24,186 @@
 <body>
     <div class="container">
         <form action="../form.php" class="form-horizontal" method="post" style="margin-top: 15%;">
-            <div class="form-group" style="font-size: 1.5rem; text-align: center;">
-                <label for="" class="control-label">请假表</label>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-lanbaimao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">姓名</label>
+            <div>
+                <div class="form-group" style="font-size: 1.5rem; text-align: center;">
+                    <label for="" class="control-label">请假表</label>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="name" placeholder="王德发"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-lanbaimao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">姓名</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="name" placeholder="王德发"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-lanmao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">学院</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-lanmao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">学院</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="college"
+                            value="华北科技学院本科生,建筑工程学院,地理信息科学(05134),地信B192" aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="college" value="华北科技学院本科生,建筑工程学院,地理信息科学(05134),地信B192"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-yinjianceng"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">班级</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="class" placeholder="地信B192"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-yinjianceng"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">班级</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-jinjianceng"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">手机</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="phone" placeholder="15511287200"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="class" placeholder="地信B192"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-sifenkesiwumaomao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">离校原因</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="leave_reason" placeholder="看牙、核酸"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-jinjianceng"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">手机</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-meiduan"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">离校去向</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="leave_to" placeholder="华北科技学院附近"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="phone" placeholder="15511287200"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-xianluomao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">请假天数</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="leave_day" placeholder="1"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-sifenkesiwumaomao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">离校原因</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-jiafeimao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">开始时间</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="datetime" step="01" class="form-control" value="2022-09-29 09:30:02"
+                            name="start_time" aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="leave_reason" placeholder="看牙、核酸"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-buoumao-zhongdianse"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">结束时间</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="datetime" step="01" class="form-control" name="leave_time"
+                            value="2022-09-29 09:30:38" aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-meiduan"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">离校去向</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-buoumao-xiyouse"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">紧急联系人</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="emergeName" placeholder="王德发 15511287200"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="leave_to" placeholder="华北科技学院附近"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-lihuamao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">学号</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="stu_id" placeholder="201804126110"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-xianluomao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">请假天数</label>
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-sanhuamao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">导员</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="tutor" placeholder="刘洋"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="leave_day" placeholder="1"
-                        aria-describedby="inputSuccess3Status">
+                <div class="form-group">
+                    <div class="col-xs-4 " style="font-size: 1.4rem;">
+                        <svg class="icon svg-icon" aria-hidden="true">
+                            <use xlink:href="#icon-sanhuamao"></use>
+                        </svg>
+                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
+                        <label class="control-label " for="">回复</label>
+                    </div>
+                    <div class="col-xs-8">
+                        <input type="text" class="form-control" name="tutorIssue"
+                            placeholder="不好意思，上午监考不能看手机，现在每天下午都有校内核酸检测，如想外出做，时间控制在两小时内"
+                            aria-describedby="inputSuccess3Status">
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-jiafeimao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">开始时间</label>
-                </div>
-                <div class="col-xs-8">
-                    <input type="datetime" step="01" class="form-control" value="2022-09-29 09:30:02" name="start_time"
-                        aria-describedby="inputSuccess3Status">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-buoumao-zhongdianse"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">结束时间</label>
-                </div>
-                <div class="col-xs-8">
-                    <input type="datetime" step="01" class="form-control" name="leave_time" value="2022-09-29 09:30:38"
-                        aria-describedby="inputSuccess3Status">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-buoumao-xiyouse"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">紧急联系人</label>
-                </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="emergeName" placeholder="王德发 15511287200"
-                        aria-describedby="inputSuccess3Status">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-lihuamao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">学号</label>
-                </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="stu_id" placeholder="201804126110"
-                        aria-describedby="inputSuccess3Status">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-xs-4 " style="font-size: 1.4rem;">
-                    <svg class="icon svg-icon" aria-hidden="true">
-                        <use xlink:href="#icon-sanhuamao"></use>
-                    </svg>
-                    <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                    <label class="control-label " for="">导员</label>
-                </div>
-                <div class="col-xs-8">
-                    <input type="text" class="form-control" name="tutor" placeholder="刘洋"
-                        aria-describedby="inputSuccess3Status">
-                </div>
-            </div>
-            <input type="submit" value="提交" id="submit" class="btn btn-primary btn-lg btn-block">
+                <input type="submit" value="提交" id="submit" class="btn btn-primary btn-lg btn-block"
+                    onclick="setFormCookie()">
         </form>
     </div>
+    </div>
     <script src="../js/form_check.js"></script>
-    <script>
-        const submit = document.querySelector("#submit")
-        submit.addEventListener('click', () => {
-            if (window.location.host) {
-                // location.href = ""
-            }
-        })
-    </script>
 </body>
 
 </html>
