--- a/src/leave_form.html
+++ b/src/leave_form.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="container">
-        <form action="../form.php" class="form-horizontal" method="post" style="margin-top: 15%;">
+        <form action="../index.html" class="form-horizontal" method="get" style="margin-top: 15%;">
             <div>
                 <div class="form-group" style="font-size: 1.5rem; text-align: center;">
                     <label for="" class="control-label">请假表</label>
@@ -50,8 +50,8 @@
                         <label class="control-label " for="">学院</label>
                     </div>
                     <div class="col-xs-8">
-                        <input type="text" class="form-control" name="college"
-                            value="华北科技学院本科生,建筑工程学院,地理信息科学(05134),地信B192" aria-describedby="inputSuccess3Status">
+                        <input type="text" class="form-control" name="college" value="画饼科技学院"
+                            aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
                 <div class="form-group">
@@ -63,7 +63,7 @@
                         <label class="control-label " for="">班级</label>
                     </div>
                     <div class="col-xs-8">
-                        <input type="text" class="form-control" name="class" placeholder="地信B192"
+                        <input type="text" class="form-control" name="class" placeholder="李信B192"
                             aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                         <label class="control-label " for="">紧急联系人</label>
                     </div>
                     <div class="col-xs-8">
-                        <input type="text" class="form-control" name="emergeName" placeholder="王德发 15511287200"
+                        <input type="text" class="form-control" name="emergeName" value="蔡徐坤 15511287200"
                             aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
