--- a/src/backEnd.html
+++ b/src/backEnd.html
@@ -138,9 +138,9 @@
     </div>
     <!-- <script src="../js/login.js"></script> -->
     <div
-      style="position: absolute; color: #999;  z-index: 55; background-color:#fff; bottom: 0px; text-align: center; overflow: hidden; width: 100%; height: auto;">
+      style="position: fixed; color: #999;  z-index: 55; background-color:#fff; bottom: 0px; text-align: center; overflow: hidden; width: 100%; height: auto;">
       <input type="button" value="后续处理"
-        style="width: 300px; border-color: #fff; border-radius: 0.25rem; margin-top: 1px; height: 45px; color: black; background:#cecece 20;">
+        style="width: 312px; border-width: inherit; border-color: #fff; border-radius: 6px; margin-top: 1px; height: 45px; color: black; background:#cecece 20;">
     </div>
   </div>
   <script>
