--- a/src/leave_form.html
+++ b/src/leave_form.html
@@ -89,7 +89,7 @@
                         <label class="control-label " for="">离校原因</label>
                     </div>
                     <div class="col-xs-8">
-                        <input type="text" class="form-control" name="leave_reason" placeholder="看牙、核酸"
+                        <input type="text" class="form-control" name="leave_reason" placeholder="就是玩"
                             aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
@@ -117,32 +117,6 @@
                     <div class="col-xs-8">
                         <input type="text" class="form-control" name="leave_day" placeholder="1"
                             aria-describedby="inputSuccess3Status">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-4 " style="font-size: 1.4rem;">
-                        <svg class="icon svg-icon" aria-hidden="true">
-                            <use xlink:href="#icon-jiafeimao"></use>
-                        </svg>
-                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                        <label class="control-label " for="">开始时间</label>
-                    </div>
-                    <div class="col-xs-8">
-                        <input type="datetime" step="01" class="form-control" value="2022-09-29 09:30:02"
-                            name="start_time" aria-describedby="inputSuccess3Status">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-4 " style="font-size: 1.4rem;">
-                        <svg class="icon svg-icon" aria-hidden="true">
-                            <use xlink:href="#icon-buoumao-zhongdianse"></use>
-                        </svg>
-                        <!-- <i class="iconfont icon-sifenkesiwumaomao col-xs-offset-2" style="font-size: 30px;"></i> -->
-                        <label class="control-label " for="">结束时间</label>
-                    </div>
-                    <div class="col-xs-8">
-                        <input type="datetime" step="01" class="form-control" name="leave_time"
-                            value="2022-09-29 09:30:38" aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
                 <div class="form-group">
@@ -193,8 +167,7 @@
                         <label class="control-label " for="">回复</label>
                     </div>
                     <div class="col-xs-8">
-                        <input type="text" class="form-control" name="tutorIssue"
-                            placeholder="不好意思，上午监考不能看手机，现在每天下午都有校内核酸检测，如想外出做，时间控制在两小时内"
+                        <input type="text" class="form-control" name="tutorIssue" placeholder="注意安全，戴好口罩"
                             aria-describedby="inputSuccess3Status">
                     </div>
                 </div>
