--- a/src/detail.html
+++ b/src/detail.html
@@ -125,9 +125,9 @@
                                     <li class="weui_media_info_meta" style="color: #999">
                                         <span style="color: #999">已通过</span>
                                     </li>
-                                    <li class="weui_media_info_meta" id="start_time">2022-09-28 13:22</li>
+                                    <li class="weui_media_info_meta" id="reply_time">2022-09-28 13:22</li>
                                     <li class="weui_media_info_meta" style="float: right; padding-right: 0px">
-                                        用时3小时
+                                        用时1小时
                                     </li>
                                 </ul>
                             </div>
@@ -145,9 +145,9 @@
 
                                 <ul class="weui_media_info" style="margin-top: 0px">
                                     <li class="weui_media_info_meta" style="color: #999">已浏览</li>
-                                    <li class="weui_media_info_meta" id="leave_time">2022-09-28 13:23</li>
+                                    <li class="weui_media_info_meta" id="reply_time">2022-09-28 13:23</li>
                                     <li class="weui_media_info_meta" style="float: right; padding-right: 0px">
-                                        用时1分钟
+                                        用时1小时
                                     </li>
                                 </ul>
                             </div>
@@ -167,9 +167,9 @@
                                     <li class="weui_media_info_meta" style="color:#999;">
                                         已通过-自动审批
                                     </li>
-                                    <li class="weui_media_info_meta" id="leave_time"></li>
+                                    <li class="weui_media_info_meta" id="reply_time"></li>
                                     <li class="weui_media_info_meta" style="float: right;padding-right: 0px;">
-                                        用时2分钟</li>
+                                        用时1小时</li>
                                 </ul>
                             </div>
                         </div>
